# crewai_gamedevs

./: .gitignore  CrewAI_Implementation_Tasks.md  Optimized CrewAI Setup.md  PROJECT.md  Pitch Iteration.md  README.md  TODO.md  gamedesign.md
.cursor/rules/: basics.mdc
game_devs/: .env.example  .gitignore  README.md  pyproject.toml
game_devs/knowledge/: GDD_GUIDE.md
game_devs/knowledge/game_design_document/: instructions.mdx  template.mdx
game_devs/src/game_devs/: crew.py  main.py
game_devs/src/game_devs/config/: agents.yaml  tasks.yaml
game_devs/src/game_devs/tools/: template_tools.py
