[project]
name = "game_devs"
version = "0.1.0"
description = "game-devs using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
game_devs = "game_devs.main:run"
run_crew = "game_devs.main:run"
train = "game_devs.main:train"
replay = "game_devs.main:replay"
test = "game_devs.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
